--- a/AngularApp/projects/applens/src/app/shared/components/unauthorized/unauthorized.component.html
+++ b/AngularApp/projects/applens/src/app/shared/components/unauthorized/unauthorized.component.html
@@ -1,7 +1,7 @@
 <div class="unauthorized-container">
     <div class="unauthorized-div">
         <img src="assets/img/unauthorized.svg" class="unauthorized-icon"/>
-        <p class="unauthorized-header">Unauthorized - Either your access token has expired or you do not have valid permissions to access AppLens. Please <strong>go back</strong> to original page & try reloading it. If the error persists, please follow these steps in order to gain access:</p>
+        <p class="unauthorized-header">Unauthorized - You do not have valid permissions to access AppLens. Please follow these steps in order to gain access:</p>
         <ol>
             <li>Go to <a href="https://myaccess" target="_blank" rel="noopener noreferrer">MyAccess</a></li>
             <li>Click on <strong>Request Access</strong></li>
