--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.html
@@ -1,4 +1,4 @@
-<detector-container [detector]="analysisDetector" [isAnalysisView]="true"></detector-container>
+<detector-container *ngIf="!searchTerm" [detector]="analysisDetector" [isAnalysisView]="true"></detector-container>
 <detector-list-analysis withinDiagnoseAndSolve="true" detectorParmName="detectorName"></detector-list-analysis>
 
 <div [hidden]="detectorId === ''">
