--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.scss
@@ -24,6 +24,7 @@
     position: relative;
     float: left;
     margin-right: 20px;
+    margin-top: 0px;
     height: 30px;
     width: 30px;
     line-height: 30px;
