Search bar, conditional rendering, support doc

--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.scss
@@ -50,6 +50,11 @@
     z-index: 1;
 }
 
+.stepper-circle-dark-blue {
+    background-color: #45a4ec;
+    z-index: 1;
+}
+
 
 .list-item {
     // display: table-row;
