--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
@@ -1,4 +1,7 @@
 <div [hidden]="detectorId !== ''">
+    <div>
+        Based on your problem description, we are running a few checks
+    </div>
     <div *ngIf="getPendingDetectorCount() > 0" style="margin-left:30px;margin-bottom: 30px">
         <i class="fa fa-circle-o-notch fa-2x fa-spin spin-icon" aria-hidden="true"></i>
         <span [@loadingAnimation]="showLoadingMessage ? 'shown' : 'hidden'"
@@ -7,11 +10,11 @@
             checks completed)
         </span>
     </div>
-
+    
     <div *ngIf="detectors.length > 0 && (issueDetectedViewModels.length > 0 || successfulViewModels.length > 0) || (getPendingDetectorCount() === 0 && loadingChildDetectors)"
         class="list-wrapper">
         <div class="red-line" [ngClass]="{'remove-padding':withinDiagnoseAndSolve}"></div>
-        <div class="list-item-wrapper">
+        <div class="list-item-wrapper" *ngIf="issueDetectedViewModels.length > 0">
             <div class="stepper-circle">
                 <i aria-hidden="true" class="fa fa-search"></i>
             </div>
@@ -154,7 +157,7 @@
             </div>
         </div>
 
-        <div class="list-item-wrapper">
+        <div class="list-item-wrapper" *ngIf="allSolutions.length > 0">
             <div class="stepper-circle stepper-circle-brown">
                 <i aria-hidden="true" class="fa fa-wrench"></i>
             </div>
@@ -226,6 +229,15 @@
                             </tr>
                         </tbody>
                     </table>
+                </div>
+            </div>
+        </div>
+        <div class="list-item-wrapper" id='recommendedDocsSection'>
+            <div class="stepper-circle stepper-circle-dark-blue">
+                <i aria-hidden="true" class="fa fa-file-text-o"></i>
+            </div>
+            <div class="list-item">
+                <div class="list-text" *ngIf="supportDocumentContent.length>0" [innerHTML]="supportDocumentContent">
                 </div>
                 <div class="white-line" [ngClass]="{'remove-padding':withinDiagnoseAndSolve}"></div>
             </div>
