--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.scss
@@ -1,12 +1,14 @@
 .search-input{
-    background-color: #FCFCFC;
-    border: 1px solid #D8DCE1;
-    line-height: 28px;
-    border-radius: 3px;
-    width: 100%;
-    padding-left: 28px;
-    font-size: 16px;
-    color: #464646;
+  background-color: #FCFCFC;
+  border: 1px solid #D8DCE1;
+  line-height: 26px;
+  border-radius: 2px;
+  width: 40%;
+  margin-top: 0.6%;
+  margin-left: 0%;
+  padding-left: 5px;
+  font-size: 13px;
+  color: #464646;
   }
 
   .icon-err{
@@ -18,20 +20,34 @@
   }
   
   .search-icon{
-    font-size: 19px;
-    color: #3c8dbc;
+    font-size: 22px;
+    color: #919699;
     position: absolute;
-    padding-left: 6px;
-    margin-top: 7px;
+    margin-left: -10.2%;
+    padding-right: 6px;
+    margin-top: 17px;
   }
   
   .search-box{
     display: block;
-    width: 40%;
-    margin-top: 0.5%;
-    margin-left: 30%;
+    height: 55px;
+    width: 93%;
+    margin-top: 0%;
+    margin-left: 80px;
+    margin-right: 16px;
+    border-bottom: 1px solid lightgray;
   }
   
   ::placeholder {
     color: #848080;
   }
+
+.edit-icon {
+  font-size: 15px;
+  color: gray;
+  margin-left: -1%;
+  margin-top: 19px;
+  position: absolute;
+  padding-right: 6px;
+  cursor: pointer;
+}
