--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
@@ -1,7 +1,4 @@
 <div [hidden]="detectorId !== ''">
-    <div>
-        Based on your problem description, we are running a few checks
-    </div>
     <div *ngIf="getPendingDetectorCount() > 0" style="margin-left:30px;margin-bottom: 30px">
         <i class="fa fa-circle-o-notch fa-2x fa-spin spin-icon" aria-hidden="true"></i>
         <span [@loadingAnimation]="showLoadingMessage ? 'shown' : 'hidden'"
@@ -182,7 +179,7 @@
                 </div>
             </div>
         </div>
-        <div class="list-item-wrapper">
+        <div class="list-item-wrapper" *ngIf="successfulViewModels.length > 0">
             <div class="stepper-circle stepper-circle-green">
                 <i aria-hidden="true" class="fa fa-check"></i>
             </div>
@@ -237,6 +234,8 @@
                 <i aria-hidden="true" class="fa fa-file-text-o"></i>
             </div>
             <div class="list-item">
+                <div class="list-title">Recommended Docs</div>
+                <div>Documents to aid in troubleshooting</div>
                 <div class="list-text" *ngIf="supportDocumentContent.length>0" [innerHTML]="supportDocumentContent">
                 </div>
                 <div class="white-line" [ngClass]="{'remove-padding':withinDiagnoseAndSolve}"></div>
