Changes to support topic service

--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
@@ -77,7 +77,7 @@
             </div>
         </div>
 
-        <div *ngIf="showAppInsightsSection" class="list-item-wrapper">
+        <div *ngIf="showAppInsightsSection && isAppInsightsEnabled" class="list-item-wrapper">
             <div class="stepper-circle stepper-circle-purple">
                 <img src="assets/img/appinsights.png" class="app-insights-image">
             </div>
