--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.scss
@@ -1,53 +1,55 @@
 .search-input{
-  background-color: #FCFCFC;
-  border: 1px solid #D8DCE1;
-  line-height: 26px;
-  border-radius: 2px;
-  width: 40%;
-  margin-top: 0.6%;
-  margin-left: 0%;
-  padding-left: 5px;
-  font-size: 13px;
+  line-height: 20px;
+  width: 100%;
   color: #464646;
-  }
+  border: 1px solid #D8DCE1;
+  border-radius: 2px;
+  padding-left: 3px;
+  background-color: #FCFCFC;
+}
 
-  .icon-err{
-    margin-top: -1px;
-    margin-left: -17px;
-    font-size: 25px;
-    position: absolute;
-    color: #bf0000;
-  }
+.search-input-box{
+  display: inline-block;
+  width: 40%;
+  font-size: 13px;
+}
+
+.icon-err{
+  margin-top: -1px;
+  margin-left: -17px;
+  font-size: 25px;
+  position: absolute;
+  color: #bf0000;
+}
   
-  .search-icon{
-    font-size: 22px;
-    color: #919699;
-    position: absolute;
-    margin-left: -10.2%;
-    padding-right: 6px;
-    margin-top: 17px;
-  }
+.search-icon{
+  font-size: 22px;
+  color: #919699;
+  position: absolute;
+  margin-left: -10.2%;
+  padding-right: 6px;
+  margin-top: 17px;
+}
   
-  .search-box{
-    display: block;
-    height: 55px;
-    width: 93%;
-    margin-top: 0%;
-    margin-left: 80px;
-    margin-right: 16px;
-    border-bottom: 1px solid lightgray;
-  }
+.search-box{
+  display: block;
+  height: 50px;
+  width: 93%;
+  margin-top: 15px;
+  margin-left: 80px;
+  margin-right: 16px;
+  border-bottom: 1px solid lightgray;
+}
   
-  ::placeholder {
-    color: #848080;
-  }
+::placeholder {
+  color: #848080;
+}
 
 .edit-icon {
   font-size: 15px;
   color: gray;
-  margin-left: -1%;
-  margin-top: 19px;
+  margin-left: -1.5%;
+  margin-top: 0.5%;
   position: absolute;
-  padding-right: 6px;
   cursor: pointer;
 }
