--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.scss
@@ -120,6 +120,11 @@
     font-weight: lighter;
   }
 
+.preloading-icon{
+    margin-left: 30px;
+    color:rgba(0,0,0,0.2);
+  }
+
 .special .list-group-item:first-child {
     border-top-right-radius: 0px !important;
     border-top-left-radius: 0px !important;
