--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.scss
@@ -15,41 +15,33 @@
 }
 
 .icon-err{
-  margin-top: -1px;
-  margin-left: -17px;
-  font-size: 25px;
-  position: absolute;
+  font-size: 15px;
   color: #bf0000;
+  margin-left: 10px;
+  margin-top: 4px;
+  position: absolute;
+  cursor: pointer;
 }
   
 .search-icon{
-  font-size: 22px;
-  color: #919699;
+  font-size: 15px;
+  color: gray;
+  margin-left: -20px;
+  margin-top: 3px;
   position: absolute;
-  margin-left: -10.2%;
-  padding-right: 6px;
-  margin-top: 17px;
+  cursor: pointer;
 }
   
 .search-box{
   display: block;
-  height: 50px;
+  height: 55px;
   width: 93%;
-  margin-top: 15px;
+  padding-top: 15px;
   margin-left: 80px;
   margin-right: 16px;
-  border-bottom: 1px solid lightgray;
+  border-bottom: 1px solid #ddd;
 }
   
 ::placeholder {
   color: #848080;
-}
-
-.edit-icon {
-  font-size: 15px;
-  color: gray;
-  margin-left: -1.5%;
-  margin-top: 0.5%;
-  position: absolute;
-  cursor: pointer;
 }
