Recommended doc optimization and search length

--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
@@ -231,6 +231,8 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="list-wrapper" *ngIf="isSearchAnalysisView">
         <div class="list-item-wrapper" *ngIf="isSearchAnalysisView" id='recommendedDocsSection'>
             <div class="stepper-circle stepper-circle-dark-blue">
                 <i aria-hidden="true" class="fa fa-file-text-o"></i>
